Added jquery-hoverintent to bower.

--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "^1.12.4"
+    "jquery": "^1.12.4",
+    "jquery-hoverintent": "1.8.1"
   }
 }
