--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "jquery": "^1.12.4",
     "jquery-hoverintent": "1.8.1",
-    "tinymce": "tinymce-dist#^4.5.5"
+    "tinymce": "tinymce-dist#^4.5.5",
+    "normalize-css": "normalize.css#^5.0.0"
   }
 }
