--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,8 @@
         "bartlett/php-compatinfo": "^5.0.6"
     },
     "autoload": {
-        "psr4": {
-            "Clubdata\\": "include/"
+        "psr-4": {
+            "Clubdata\\": "core/"
         },
         "files": [
             "vendor/adodb/adodb-php/drivers/adodb-mysqli.inc.php"
