Changed Code Climate config.

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -27,3 +27,11 @@ exclude_paths:
 - "Documentation/"
 - "Installation/DOCU"
 - "Tools/"
+- "logos/"
+- "tmp/"
+- "include/fonts/"
+- "**.jpg"
+- "**.png"
+- "**.gif"
+- "**.xcf"
+- "**.tpl"
